--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <!-- header & navbar -->
         <header>
-            <h3>With Javascript [Tutorial]</h3>
+            <h3>With Javascript <a href="[Tutorial]" target="_blank"></a></h3>
             <nav>
                 <a href="index.html">Color Generator</a>
             </nav>
