--- a/1-color-flipper-or-generator/index.html
+++ b/1-color-flipper-or-generator/index.html
@@ -15,12 +15,12 @@
             <h3>With Javascript <a href="https://youtu.be/3PHXvlpOkf4" target="_blank">[Tutorial]</a></h3>
         </header>
         <main>
-            <div class="CG_Container container">
+            <div class="container">
                 <h2>
                     Background Color:
                     <span class="Hex_Code">#D8D8D8</span>
                 </h2>
-                <button class="CG_Btn" id="CG_Btn">Generate</button>
+                <button class="Btn" id="Btn">Generate</button>
             </div>
         </main>
         <!-- footer -->
