--- a/2-counter/index.html
+++ b/2-counter/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="style.css">
-        <title>Color Flipper</title>
+        <title>Counter</title>
     </head>
     <body>
         <!-- header & navbar -->
         <header>
             <nav>
-                <a href="index.html">Color Generator</a>
+                <a href="index.html">Counter</a>
             </nav>
             <h3>With Javascript
                 <a href="https://youtu.be/3PHXvlpOkf4" target="_blank">[Tutorial]</a>
@@ -18,7 +18,6 @@
         </header>
         <main>
             <div class="container">
-                <h2>Counter</h2>
                 <h1 id="Counter_Value">0</h1>
                 <div class="Counter_Btns">
                     <button class="Counter_Btn decrease">Decrease</button>
